# gna

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  InterpExpoTmp.cc  LICENSE  README.md  Sum.py  basetest.sh  compareNL_gr.root  compare_dyb_mine.sh  dedxep_EElectron.txt  dedxep_EPositron.txt  dotfile.dot  draw_lsnl.sh  env.sh  filestoprocess  find_dyb_p.sh  fitChe.C  gna  ins.sh  job200subdetector_gaussian_rms.sh  job_juno_birks.sh  lsnl_test.sh  mychren.root  plot.py  pytest.ini  requirements.txt  rootlogon.C  semi-pull-abs.sh  semi-pull-with-norm4.7  semi-pull.sh  sourcegna.sh  stoppingpower.txt  subdetector200_nph.txt  test.py  tmp.txt
PointsFCTmp/: Paraboloid.cc  Paraboloid.hh  Poraboloid.cc  Poraboloid.hh  SpectrumCrossSection.cc  SpectrumCrossSection.hh  compile.sh  main2.cpp  workfile
backgrounds/: GeoNeutrinoFluxNormed.hh
cmake/: FindEigen3.cmake  add_fmt.cmake  ccache_support.cmake  compilation_opts.cmake  compiler_selection.cmake  cuda_support.cmake  debug_opts.cmake  dev-tools.cmake
config/dictionaries/: detector.py  osc.py  reactor_anu.py  unfolding.py
config/gna/: config_vars.h.in  cuda_config_vars.h.in  gnacfg.py  labels.py
core/: CMakeLists.txt  Chi2.cc  Chi2.hh  Cholesky.hh  CovarianceToyMC.cc  CovarianceToyMC.hh  CovariatedPrediction.cc  CovariatedPrediction.hh  Covmat.cc  Covmat.hh  Data.hh  DataEnums.hh  DataType.hh  Derivative.cc  Derivative.hh  Exceptions.hh  FillLike.hh  FitMeasure.hh  GNAObject.cc  GNAObject.hh  GNAObjectBind1N.cc  GNAObjectBind1N.hh  GNAObjectBindMN.cc  GNAObjectBindMN.hh  GNAObjectBindkN.cc  GNAObjectBindkN.hh  HistEdges.hh  Histogram.hh  Identity.hh  IdentityGPU.hh  IdentityX2.hh  Jacobian.cc  Jacobian.hh  LinearInterpolator.cc  LinearInterpolator.hh  LinkDef.h  MatrixProduct.cc  MatrixProduct.hh  Minimizable.hh  MinimizableVerbose.hh  (+65 more)
covariance/: corrmap_xuyu.root  corrmap_xuyu.txt  test_covariance.py
cuda/: CMakeLists.txt  GNAcuMath.cu  GNAcuMath.h  README.md  cuda_config_vars.h.in  rumSimp.sh  simp.cu  test.cu  test.h
cuda/core/: Chi2.cc  CuChi2.cc  CuChi2.hh  DataLocation.hh  GpuArgs.hh  GpuArray.cu  GpuArray.hh  GpuArrayTypes.hh  GpuBasics.cu  GpuBasics.hh  IdentityGPU.hh  StreamPool.cu  StreamPool.hh  cuElementary.hh  main.cu
cuda/extra/: Constants.h  GNAcuDataLocation.hh  GNAcuGpuArray.cu  GNAcuGpuArray.hh  GNAcuGpuMemStates.hh  GNAcuMath.cu  GNAcuMath.h  GNAcuOscProbFull.cu  GNAcuOscProbFull.h  GNAcuOscProbMem.cu  GNAcuOscProbMem.hh  GNAcuRootMath.cuh  GNAcuRootMath.h  blocksize.sh  cuIntegrate.cu  cuIntegrate.hh  cuInterpExpo.cu  cuInterpExpo.hh  cuOscProbPMNS.cu  cuOscProbPMNS.hh  cuRootMath.h  main.cpp  main.cu  test.cu
cuda/operations/: cholecky.cu  cuOperations.cuh  exp.cu  fillike.cu  identity.cu  main.cu  main2.cpp  matrixproduct_old.cu  matrixproductstable.cu  normalize.cu  poisson.cu  product.cu  rebin.cu  renormalizediag.cu  selfpower.cu  sum.cu  transpose.cu  weightedsum.cu
data/: AntineutrinoSpectrum_232Th.knt  AntineutrinoSpectrum_238U.knt
detector/: C14Spectrum.cc  C14Spectrum.hh  C14_spectrum.cc  C14_spectrum.hh  EnergyLeak.cc  EnergyLeak.hh  EnergyNonlinearity.cc  EnergyNonlinearity.hh  EnergyResolution.cc  EnergyResolution.hh  EnergyResolutionWithSparse.cc  EnergyResolutionWithSparse.hh  EnergySmear.cc  EnergySmear.hh  ExpNonlinearity.hh  HistNonlinearity.cc  HistNonlinearity.hh  HistSmear.cc  HistSmear.hh  Mine.cc  Mine.hh  MixedNonlinearity.cc  MixedNonlinearity.hh  Npesmear.hh  Quadratic.hh  RenormalizeDiag.cc  RenormalizeDiag.hh  Segment.cc  Segment.hh  Worst.hh  newfitter.h
doc/: Makefile  Rebin.rst  doxygen.conf
examples/: CMakeLists.txt  GaussianPeakWithBackground.cc  GaussianPeakWithBackground.hh  binnumbertest.sh  diff_plot_between_hier_3pers_res.sh  diff_plot_between_hier_5pers_res.sh  diff_plot_between_hier_noresolution.sh  fit_the_normal_with_inverted_get_best_dMsqEE.sh  juno_chi2_change_dmEE.sh  juno_chi2_change_dmEE_TEST2.sh  juno_decoh.sh  juno_decoh_contour_sigma_dmEE.sh  matter_oscprob_ex.py  matter_oscprob_ex_gpu.py  matter_oscprob_legacy.py  plot_closest_match_between_spectra_hier.sh  two_peaks_anticorr.sh  unoscil_and_both_hier_3pers_res.sh  unoscil_and_both_hier_no_resolution.sh
extra/: CMakeLists.txt  EigenHelpers.hh  GridFilter.cc  GridFilter.hh  final_act.hh
input/: demo.c  drawlayerdis.C  fittest.c  fittest_before70.c  hgamma2e.root  npe-r-1mev.root  out.root  tt.py
integrator/: FakeGSLFunction.hh  GaussLegendre.cc  GaussLegendre.hh  GaussLegendre2d.cc  GaussLegendre2d.hh
macro/: indices.py  merge-hdf5.py
neutrino/: EvisToEe.hh  EvisToEnu.hh  IbdFirstOrder.cc  IbdFirstOrder.hh  IbdInteraction.hh  IbdZeroOrder.cc  IbdZeroOrder.hh  Neutrino.hh  OscProb2nu.cc  OscProb2nu.hh  OscProbMatterUniform.cc  OscProbMatterUniform.hh  OscProbPMNS.cc  OscProbPMNS.hh  OscProbPMNSDecoh.cc  OscProbPMNSDecoh.hh  OscillationVariables.hh  PDGVariables.hh  PMNSVariables.hh  ReactorCore.cc  ReactorCore.hh  ReactorGroup.cc  ReactorGroup.hh  ReactorNorm.cc  ReactorNorm.hh  Units.hh
pylib/: constructors.py  converters.py  file_reader.py  load.py  loadfast.py  physlib.py  printing.py  tutorial.py
readme/: changelog.txt
scripts/: bencmark.py  cross_check_helpers.py  gaussian_model_test_chi2_vs_poisson.sh  gaussianpeak_data  imports.py  juno.sh  juno_chi2_change_C14.sh  juno_chi2_change_C14_coinc_window.sh  juno_chi2_change_Eres.sh  juno_new.sh  juno_port_chi2_change_Eres.sh  make_hier_dmEE_chi2_scan_plot.py  paraboloid_test.sh
standalone/: LittleTest.cc  LittleTest.hh
tests/: strfmt.py  test_i4305_uniformangle.py  unfolding.py
training/: README.md
transformations/: CMakeLists.txt  Cholesky.hh  Covmat.cc  Identity.hh  LinearInterpolator.hh  Sum.hh  WeightedSum.cc
unittest/: CMakeLists.txt  parameters.cc  parameters.hh  transformations.cc  transformations.hh  unit_exceptions.cc  unit_exceptions.hh  unit_parameters.cc  unit_parameters.hh  unit_transformations.cc  unit_transformations.hh
wrapper/: CMakeLists.txt  CMakeLists_old.txt  wrapper.cxx
wrapper/cuda/: CMakeLists.txt  CMakeLists_old.txt  simp.cu  simp.h  test.cu  test.h
(+1445 files in other folders)
